# kiln

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README.md  kiln_server.py  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  developer.md  plan-reviewer.md  qa-engineer.md  scrum-master.md  security-reviewer.md
.claude/commands/: conflicts.md  done.md  pick-task.md  retrospective.md  review.md  ship.md  sprint-start.md  status.md  techdebt.md
.claude/hooks/: branch-protector.js  change-logger.js  context-backup.js  definition-of-done.js  dependency-auditor.js  destructive-guard.js  format-and-lint.js  hook-utils.js  protected-files.js  quality-gate.js  secrets-firewall.js  session-start.js  sprint-anchor.js  task-continuation.js
docs/: ANIMATION_SPECS.md  API_REFERENCE.md  ARCHITECTURE.md  AUTOMATIC_FIXES_COMPLETE.md  CHONK_BUSINESS.md  CHONK_SPEC.md  CLAUDE.md  DIAGNOSTIC_SYSTEM_UPDATE.md  EXPORT_FORMAT.md  FRONTEND_INTEGRATION_COMPLETE.md  HIERARCHICAL_VIEW_COMPLETE.md  HIERARCHY_EXTRACTION_SUMMARY.md  INSTALLATION.md  MVP_DEMO.md  ONBOARDING_COMPLETE.md  Plan.md  README.md  REFACTOR_COMPLETE.md  SESSION_SUMMARY.md  TROUBLESHOOTING.md  UI_BUILD_COMPLETE.md  UI_INTEGRATION_COMPLETE.md  UX_IMPROVEMENTS_COMPLETE.md  VALIDATION_CRITERIA.md
forge/: README.md
forge/src/: competency.py  consistency.py  contributors.py  coverage.py  discovery.py  examples.py  models.py  quarry_integration.py  server.py  storage.py  test_split.py
forge/tests/: conftest.py  test_competency.py  test_consistency.py  test_contributors.py  test_coverage.py  (+7 more)
foundry/: README.md
hearth/: README.md
quarry/: README.md
scripts/: build_nested_hierarchy.py  chunk_from_blocks.py  chunk_with_hierarchy.py  compare_chunking.py  demo_mvp.py  demo_new_chonk.py  extract_with_hierarchy.py  load_sample_data.py  test_automatic_fixes.py  test_diagnostics.py  test_docling_gpu.py  test_new_endpoints.py  test_ui_integration.py  visualize_nested_hierarchy.py
shared/: README.md  __init__.py  hardening.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+213 files in other folders)
